@@ -31,13 +31,14 @@
 # MinSpareServers: minimum number of server processes which are kept spare
 # MaxSpareServers: maximum number of server processes which are kept spare
 # MaxClients: maximum number of server processes allowed to start
-# MaxRequestsPerChild: maximum number of requests a server process serves
+# MaxConnectionsPerChild: maximum number of connections a server process serves
+#                         before terminating
 <IfModule mpm_prefork_module>
-    StartServers          5
-    MinSpareServers       5
-    MaxSpareServers      10
-    MaxClients          150
-    MaxRequestsPerChild   0
+    StartServers             5
+    MinSpareServers          5
+    MaxSpareServers         10
+    MaxClients             150
+    MaxConnectionsPerChild   0
 </IfModule>
 
 # worker MPM
@@ -46,14 +47,15 @@
 # MinSpareThreads: minimum number of worker threads which are kept spare
 # MaxSpareThreads: maximum number of worker threads which are kept spare
 # ThreadsPerChild: constant number of worker threads in each server process
-# MaxRequestsPerChild: maximum number of requests a server process serves
+# MaxConnectionsPerChild: maximum number of connections a server process serves
+#                         before terminating
 <IfModule mpm_worker_module>
-    StartServers          2
-    MaxClients          150
-    MinSpareThreads      25
-    MaxSpareThreads      75 
-    ThreadsPerChild      25
-    MaxRequestsPerChild   0
+    StartServers             2
+    MaxClients             150
+    MinSpareThreads         25
+    MaxSpareThreads         75 
+    ThreadsPerChild         25
+    MaxConnectionsPerChild   0
 </IfModule>
 
 # event MPM
@@ -62,14 +64,15 @@
 # MinSpareThreads: minimum number of worker threads which are kept spare
 # MaxSpareThreads: maximum number of worker threads which are kept spare
 # ThreadsPerChild: constant number of worker threads in each server process
-# MaxRequestsPerChild: maximum number of requests a server process serves
+# MaxConnectionsPerChild: maximum number of connections a server process serves
+#                         before terminating
 <IfModule mpm_event_module>
-    StartServers          2
-    MaxClients          150
-    MinSpareThreads      25
-    MaxSpareThreads      75
-    ThreadsPerChild      25
-    MaxRequestsPerChild   0
+    StartServers             2
+    MaxClients             150
+    MinSpareThreads         25
+    MaxSpareThreads         75
+    ThreadsPerChild         25
+    MaxConnectionsPerChild   0
 </IfModule>
 
 # NetWare MPM
@@ -78,17 +81,17 @@
 # MinSpareThreads: Minimum number of idle threads, to handle request spikes
 # MaxSpareThreads: Maximum number of idle threads
 # MaxThreads: Maximum number of worker threads alive at the same time
-# MaxRequestsPerChild: Maximum  number of requests a thread serves. It is 
-#                      recommended that the default value of 0 be set for this
-#                      directive on NetWare.  This will allow the thread to 
-#                      continue to service requests indefinitely.                          
+# MaxConnectionsPerChild: Maximum  number of connections a thread serves. It
+#                         is recommended that the default value of 0 be set
+#                         for this directive on NetWare.  This will allow the
+#                         thread to continue to service requests indefinitely.
 <IfModule mpm_netware_module>
     ThreadStackSize      65536
     StartThreads           250
     MinSpareThreads         25
     MaxSpareThreads        250
     MaxThreads            1000
-    MaxRequestsPerChild      0
+    MaxConnectionsPerChild   0
     MaxMemFree             100
 </IfModule>
 
@@ -97,19 +100,19 @@
 # MinSpareThreads: Minimum number of idle threads per process, 
 #                  to handle request spikes
 # MaxSpareThreads: Maximum number of idle threads per process
-# MaxRequestsPerChild: Maximum number of connections per server process
+# MaxConnectionsPerChild: Maximum number of connections per server process
 <IfModule mpm_mpmt_os2_module>
-    StartServers           2
-    MinSpareThreads        5
-    MaxSpareThreads       10
-    MaxRequestsPerChild    0
+    StartServers             2
+    MinSpareThreads          5
+    MaxSpareThreads         10
+    MaxConnectionsPerChild   0
 </IfModule>
 
 # WinNT MPM
 # ThreadsPerChild: constant number of worker threads in the server process
-# MaxRequestsPerChild: maximum  number of requests a server process serves
+# MaxConnectionsPerChild: maximum number of connections a server process serves
 <IfModule mpm_winnt_module>
-    ThreadsPerChild      150
-    MaxRequestsPerChild    0
+    ThreadsPerChild        150
+    MaxConnectionsPerChild   0
 </IfModule>
 
