@@ -1792,7 +1792,7 @@ wildcard matching available in 2.3.6 and later</compatibility>
 
     <p>When a client uses a Keep-Alive connection it will be counted
     as a single "request" for the <directive module="mpm_common"
-    >MaxRequestsPerChild</directive> directive, regardless
+    >MaxConnectionsPerChild</directive> directive, regardless
     of how many requests are sent using the connection.</p>
 </usage>
 
