@@ -100,7 +100,7 @@
 
     <ul>
       <li>set the value of <directive module="mpm_common">
-      MaxRequestsPerChild</directive> to zero</li>
+      MaxConnectionsPerChild</directive> to zero</li>
 
       <li>set the value of <directive module="mpm_common">
       MaxSpareThreads</directive> to the same value as
@@ -131,7 +131,7 @@
     these directives also set the privileges which will be inherited
     by CGI scripts.</p>
 
-    <p><directive module="mpm_common">MaxRequestsPerChild</directive>
+    <p><directive module="mpm_common">MaxConnectionsPerChild</directive>
     controls how frequently the server recycles processes by killing
     old ones and launching new ones.</p>
 
@@ -160,7 +160,7 @@
 </directivesynopsis>
 <directivesynopsis location="mpm_common"><name>MaxMemFree</name>
 </directivesynopsis>
-<directivesynopsis location="mpm_common"><name>MaxRequestsPerChild</name>
+<directivesynopsis location="mpm_common"><name>MaxConnectionsPerChild</name>
 </directivesynopsis>
 <directivesynopsis location="mpm_common"><name>MaxSpareThreads</name>
 </directivesynopsis>
